@@ -81,7 +81,7 @@ struct TestConfig
 		Config::instance()->set_default_j2k_bandwidth (100000000);
 		Config::instance()->set_log_types (LogEntry::TYPE_GENERAL | LogEntry::TYPE_WARNING | LogEntry::TYPE_ERROR);
 
-		EncodeServerFinder::instance()->disable ();
+		EncodeServerFinder::instance()->stop ();
 
 		signal_manager = new TestSignalManager ();
 	}
